Fix double handling of arrow keys in menus on gtk2 (bug 219706).  This prevents the OS default action from occuring if we've handled the event.  We may want to stop the signal at the gtk level as well, but this fix should be reasonable safe.  r=mkaply, sr=dbaron.